k8s/ipfs-cluster-base/cluster-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ipfs-cluster
spec:
  serviceName: ipfs-cluster
  replicas: 2
  selector:
    matchLabels:
      app: ipfs-cluster
  template:
    metadata:
      labels:
        app: ipfs-cluster
    spec:
      containers:
        - name: ipfs
          image: "ipfs/go-ipfs:v0.8.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: ipfs-swarm
              protocol: TCP
              containerPort: 4001
            - name: ipfs-admin-api
              protocol: TCP
              containerPort: 5001
            - name: ipfs-gw
              protocol: TCP
              containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: ipfs-swarm
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 15
          volumeMounts:
            - mountPath: /data/ipfs
              name: ipfs-storage
            - name: configure-script
              mountPath: /custom
          resources:
            {}
        - name: ipfs-cluster
          image: "ipfs/ipfs-cluster:latest"
          imagePullPolicy: IfNotPresent
          command: ["sh", "/custom/entrypoint.sh"]
          ports:
            - name: clu-admin-api
              containerPort: 9094
              protocol: TCP
            - name: cluster-gw
              containerPort: 9095
              protocol: TCP
            - name: cluster-swarm
              containerPort: 9096
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: cluster-swarm
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: cluster-storage
              mountPath: /data/ipfs-cluster
            - name: configure-script
              mountPath: /custom
          resources:
            {}

      volumes:
      - name: configure-script
        configMap:
          name: ipfs-cluster-set-bootstrap-conf


  volumeClaimTemplates:
    - metadata:
        name: cluster-storage
        namespace: ipfs
      spec:
        storageClassName: standard
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: ipfs-storage
        namespace: ipfs
      spec:
        storageClassName: standard
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 15Gi
