k8s/ipfs-cluster-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipfs-p2p
  labels:
    app: ipfs-cluster
spec:
  type: LoadBalancer
  ports:
    - name: ipfs-swarm
      targetPort: ipfs-swarm
      port: 4001
  selector:
    app: ipfs-cluster
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs-gw
  labels:
    app: ipfs-cluster
spec:
  type: NodePort
  ports:
    - name: cluster-gw
      targetPort: cluster-gw
      port: 9095
  selector:
    app: ipfs-cluster
