k8s/ipfs-cluster-base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ipfs-cluster-rpc
spec:
  backend:
    serviceName: ipfs-api
    servicePort: 9094
